--- a/TravelOrganizationSystem/WebApp/Pages/Shared/_Layout.cshtml.css
+++ b/TravelOrganizationSystem/WebApp/Pages/Shared/_Layout.cshtml.css
@@ -39,10 +39,5 @@ button.accept-policy {
   line-height: inherit;
 }
 
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  line-height: 60px;
-}
+/* Old footer styles removed - now using modern footer */
+/* Modern footer styles are in travel-theme.css */
